test/parsing/errors/recordInheritanceNotSupported.chpl
record Foo {
  var x = 3;
}

record Bar : Foo {
  var y = 5;
}
